[tool.poetry]
name = "protein-guessr"
version = "0.1.0"
description = ""
authors = ["Stephen Malina <stephenmalina@gmail.com>"]
readme = "README.md"
packages = [{include = "protein_guessr"}]

[tool.poetry.dependencies]
python = "^3.11"
nglview = "^3.0.4"
biopython = "^1.81"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
